<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orpheus_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/song_album_art"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/song_album_art_desc"
            android:src="@drawable/candy_mkgee" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_song"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/song_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_artist"
                    android:layout_gravity="center"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <Button
                android:id="@+id/add_song_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/plus_sign_btn"/>
        </LinearLayout>
        <TextView
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/dummy_artist_desc"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>