<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orpheus_black"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/search_placeholder"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@drawable/rounded_search_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_searches"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <include
                android:id="@+id/recent_search_playlist_1"
                layout="@layout/playlist"/>
            <include
                android:id="@+id/recent_search_playlist_2"
                layout="@layout/playlist"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_all"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="25sp"/>

        <GridView
            android:id="@+id/browse_all_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="50dp"
            android:clipToPadding="false"
            android:numColumns="3"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>